--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,9 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-remappings = ["solmate/=lib/solmate/src/"]
+remappings = [
+    "solmate/=lib/solmate/src/",
+    "libr/=lib/solidity-lib/contracts/libraries",
+]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
